# Lac

./: README.md
Dev-Cpp/: Lac.dev
MSVC/: Lac.sln  Lac.vcxproj
PellesC/: Lac.ppj
area/: .gitignore  AREA.LST  limbo.are  midgaard.are  purgator.are  school.are
area/MOBProgs/: 3140.prg  arena.prg  elf.prg  helm2.prg  jezyny.prg  kat.prg  krupier.prg  mahntor.prg  marynarz.doc  marynarz.prg  mishara.prg  nurtdno.prg  nurtpow.prg  statek.doc  statek.prg  straz.prg  tol2.prg  uzdr.prg  vaevict.prg  wieza.prg  wrozka.prg  zebr.prg
area/MOBProgs/z11103/: bosman.prg  brzeg.prg  egzorc.prg  janni.prg  kapitan.prg  karczm.prg  kufel.prg  mieso.prg  port.prg  przystan.prg  stan.prg  tarcza.prg  zolnierz.prg
area/pomoc/: README  pomoc-b.are  pomoc-d.are  pomoc-g.are  pomoc-k.are  pomoc-l.are  pomoc-n.are  pomoc-p.are  pomoc-r.are  pomoc-u.are
class/: kle  mag  mni  nek  pal  psi  skr  sza  szp  woj  zlo
data/: .gitignore  bluzg.txt  cudowne.txt  donos.txt  drogi.txt  hints.txt  imlista.txt  impowod.txt  jebut.txt  miodek.txt  schematy.txt  strefy.txt  totem.txt  vnums.txt  wyjdz.txt
data/gdb/: README
data/gprof/: README
data/opisy/: mask.txt
doc/: act.txt  format_krainy.lac  license.lac  mobc.lac  numeracja.lac  styl_krainy.lac  styl_programowania.txt  systemy.txt  zmysly.txt
doc/historyczne/Envy22/: README  act.txt  area.txt  class.txt  command.txt  config.txt  contrib.txt  dikuimp.txt  down.txt  drool.txt  hacker.txt  immortal.txt  memory.txt  new.txt  next.txt  pfile.txt  port.txt  race.txt  security.txt  sites.txt  skill.txt  sky.txt  snip.txt  template.txt  vnum.txt
player/s/: Stefan
src/: .gitignore  Makefile  Makefile.MM  Makefile.cmn  Makefile.dos  Makefile.in  Makefile.plan9  act_comm.c  act_info.c  act_info.h  act_move.c  act_move.h  act_obj.c  act_wiz.c  act_wiz.h  clan.c  comm.c  comm.h  config.h  configure  const.c  const.h  db.c  db.h  dla-gdb  ed  fight.c  gry.c  gry.h  handler.c  handler.h  httpd.c  hunt.c  interp.c  interp.h  kzapisz.c  kzapisz.h  lac.c  lanclicz.c  magic.c  (+27 more)
src/gla/: README  combo.c  ed  glaca.c  glaca.glade  glaca.h  kraina.c  lpl.c  mapa.c  mob.c  pomieszczenie.c  progi.c  przedmiot.c  reset.c  vnum.c  wyjscie.c
util/autoconf/: README  ax_compiler_vendor.m4  ax_pthread.m4  configure.ac  mysql.m4
util/lpl/: Makefile  lpl.c
